--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netflix-gpt",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ritikjaiswal88.github.io/netflix-gpt",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@testing-library/dom": "^10.4.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
